@startuml
namespace command {
    interface Button  {
        + Bind( Command) 
        + Press() 

    }
    interface Command  {
        + Execute() error

    }
    interface Shortcut  {
        + Bind( Command) 
        + Press() 

    }
    class baseButton << (S,Aquamarine) >> {
        - command Command

        + Bind(cmd Command) 
        + Press() 

    }
    class closeButton << (S,Aquamarine) >> {
        + Text string

        + Press() 

    }
    class closeCommand << (S,Aquamarine) >> {
        - f *file

        + Execute() error

    }
    class file << (S,Aquamarine) >> {
        - save() error
        - close() error

    }
    class saveButton << (S,Aquamarine) >> {
        + Text string

        + Press() 

    }
    class saveCommand << (S,Aquamarine) >> {
        - f *file

        + Execute() error

    }
    class shortcut << (S,Aquamarine) >> {
        - keys []int32
        - cmd Command

        + Bind(c Command) 
        + Press() 

    }
}
"command.baseButton" *-- "command.closeButton"
"command.baseButton" *-- "command.saveButton"

"command.Button" <|-- "command.baseButton"
"command.Shortcut" <|-- "command.baseButton"
"command.Command" <|-- "command.closeCommand"
"command.Command" <|-- "command.saveCommand"
"command.Button" <|-- "command.shortcut"
"command.Shortcut" <|-- "command.shortcut"

@enduml
